@startuml

title __P4's Class Diagram__\n

  namespace magnitude {
    interface magnitude.IMagnitude {
    }
  }
  

  namespace magnitude {
    class magnitude.Magnitude {
    }
  }
  

  namespace magnitude {
    namespace exceptions {
      class magnitude.exceptions.QuantityException {
      }
    }
  }
  

  namespace magnitude {
    namespace exceptions {
      class magnitude.exceptions.UnknownUnitException {
      }
    }
  }
  

  namespace metricSystems {
    interface metricSystems.IMetricSystem {
    }
  }
  

  namespace metricSystems {
    interface metricSystems.IMetricSystemConverter {
    }
  }
  

  namespace metricSystems {
    abstract class metricSystems.MetricSystem {
    }
  }
  

  namespace metricSystems {
    class metricSystems.MetricSystemConverter {
    }
  }
  

  namespace metricSystems {
    namespace imperial.length {
      class metricSystems.imperial.length.ImperialLengthMetricSystem {
      }
    }
  }
  

  namespace metricSystems {
    namespace si.length {
      class metricSystems.si.length.SiLengthMetricSystem {
      }
    }
  }
  

  namespace metricSystems {
    namespace si.length {
      namespace converters {
        class metricSystems.si.length.converters.SiLength2ImperialConverter {
        }
      }
    }
  }
  

  namespace metricSystems {
    namespace si.time {
      class metricSystems.si.time.SiTimeMetricSystem {
      }
    }
  }
  

  namespace test {
    class test.ConversionTest {
    }
  }
  

  namespace test {
    class test.MainTest {
    }
  }
  

  namespace test {
    class test.MetricSystemTest {
    }
  }
  

  namespace test {
    class test.PhysicalUnitTest {
    }
  }
  

  namespace units {
    interface units.IPhysicalUnit {
    }
  }
  

  namespace units {
    abstract class units.Length {
    }
  }
  

  namespace units {
    abstract class units.PhysicalUnit {
    }
  }
  

  namespace units {
    enum Quantity {
    }
  }
  

  namespace units {
    abstract class units.Time {
    }
  }
  

  namespace units {
    namespace imperial.length {
      class units.imperial.length.ImperialLength {
      }
    }
  }
  

  namespace units {
    namespace si.length {
      class units.si.length.SiLength {
      }
    }
  }
  

  namespace units {
    namespace si.time {
      class units.si.time.SiTime {
      }
    }
  }
  

  magnitude.Magnitude .up.|> magnitude.IMagnitude
  magnitude.Magnitude o-- units.IPhysicalUnit : unit
  magnitude.exceptions.QuantityException o-- units.Quantity : q1
  magnitude.exceptions.QuantityException o-- units.Quantity : q2
  magnitude.exceptions.UnknownUnitException -up-|> magnitude.exceptions.QuantityException
  metricSystems.MetricSystem .up.|> metricSystems.IMetricSystem
  metricSystems.MetricSystem o-- units.IPhysicalUnit : base
  metricSystems.MetricSystemConverter .up.|> metricSystems.IMetricSystemConverter
  metricSystems.MetricSystemConverter o-- metricSystems.IMetricSystem : source
  metricSystems.MetricSystemConverter o-- metricSystems.IMetricSystem : target
  metricSystems.imperial.length.ImperialLengthMetricSystem -up-|> metricSystems.MetricSystem
  metricSystems.si.length.SiLengthMetricSystem -up-|> metricSystems.MetricSystem
  metricSystems.si.length.converters.SiLength2ImperialConverter -up-|> metricSystems.MetricSystemConverter
  metricSystems.si.time.SiTimeMetricSystem -up-|> metricSystems.MetricSystem
  units.Length -up-|> units.PhysicalUnit
  units.PhysicalUnit .up.|> units.IPhysicalUnit
  units.Time -up-|> units.PhysicalUnit
  units.imperial.length.ImperialLength -up-|> units.Length
  units.si.length.SiLength -up-|> units.Length
  units.si.time.SiTime -up-|> units.Time


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
